--- a/A4.md
+++ b/A4.md
@@ -4,7 +4,8 @@
 Source: [PDF File](https://digital.csic.es/bitstream/10261/353571/1/localoutbreak.pdf) 
 Title: _Local Effects of Nest-Boxes for Avian Predators over Common Vole Abundance during a Mid-Density Outbreak_ (2023)
 Relevance: 
-Image: 
+Image: ![image](https://github.com/user-attachments/assets/7c5c64fb-9fd0-480b-9407-86a0fed1b057)
+
 
 ## Obtaining map
 Source: [Zip file](https://ftp.itacyl.es/cartografia/05_SIGPAC/2021_ETRS89/Parcelario_SIGPAC_CyL_Municipios/47_Valladolid/) 
