--- a/A4.md
+++ b/A4.md
@@ -5,14 +5,15 @@ Source: [PDF File](https://digital.csic.es/bitstream/10261/353571/1/localoutbrea
 
 Title: _Local Effects of Nest-Boxes for Avian Predators over Common Vole Abundance during a Mid-Density Outbreak_ (2023)
 
-Relevance: 
+Relevance: Provides number, location, proximity to margins, and vole catchments
+
 Image: ![image](https://github.com/user-attachments/assets/7c5c64fb-9fd0-480b-9407-86a0fed1b057)
 
 
 ## Obtaining map
 Source: [Zip file](https://ftp.itacyl.es/cartografia/05_SIGPAC/2021_ETRS89/Parcelario_SIGPAC_CyL_Municipios/47_Valladolid/) 
 
-License: 
+License: Licencia-IGCYL-NC (Non-commercial use) 
 
-Relevance: 
+Relevance: Provides the base map for the georeferencing. Observations: the information obtained is from 2021 and the article is from 2023, which could mean 
 
