--- a/A4.md
+++ b/A4.md
@@ -1,6 +1,7 @@
 # Assignment 4: Georeferencing 
 
-## Obtaining image
+## Steps 
+### 1. Screenshot 
 Source: [PDF File](https://digital.csic.es/bitstream/10261/353571/1/localoutbreak.pdf) 
 
 Title: _Local Effects of Nest-Boxes for Avian Predators over Common Vole Abundance during a Mid-Density Outbreak_ (2023)
@@ -9,11 +10,21 @@ Relevance: Provides number, location, proximity to margins, and vole catchments
 
 Image: ![image](https://github.com/user-attachments/assets/7c5c64fb-9fd0-480b-9407-86a0fed1b057)
 
-
-## Obtaining map
+### 2. SIGPAC base
 Source: [Zip file](https://ftp.itacyl.es/cartografia/05_SIGPAC/2021_ETRS89/Parcelario_SIGPAC_CyL_Municipios/47_Valladolid/) 
 
 License: Licencia-IGCYL-NC (Non-commercial use) 
 
 Relevance: Provides the base map for the georeferencing. Observations: the information obtained is from 2021 and the article is from 2023, which could mean 
 
+### 3 and 4. Georeference 
+Created four points and ran the georeferencing process with: 
+- *Geometry type:* point
+- *Projection:* EPSG 25830
+- *Type:* Integer 32 bits 
+### 5. Points 
+Created a new GPKG layer with 100 points and updated the attribute table to include 1 count of nest box per point
+### 6. Categorize parcels
+Categorized parcels in 7 classes by area size. I could not figure out the units from the attribute table and transform them into meters. I used the measure tool to see how much it was in meters using the cartesian projection: 
+### 7. Layout 
+## Documentation of steps 
