--- a/A4.md
+++ b/A4.md
@@ -21,7 +21,9 @@ Relevance: Provides the base map for the georeferencing. Observations: the infor
 Created four points and ran the georeferencing process with: 
 - *Geometry type:* point
 - *Projection:* EPSG 25830
-- *Type:* Integer 32 bits 
+- *Type:* Integer 32 bits
+![image](https://github.com/user-attachments/assets/77a96e95-206f-43e1-acf2-ff947456fac3)
+
 ### 5. Points 
 Created a new GPKG layer with 100 points and updated the attribute table to include 1 count of nest box per point
 ### 6. Categorize parcels
