--- a/A4.md
+++ b/A4.md
@@ -28,5 +28,7 @@ Created four points and ran the georeferencing process with:
 Created a new GPKG layer with 100 points and updated the attribute table to include 1 count of nest box per point
 ### 6. Categorize parcels
 Categorized parcels in 7 classes by area size. I could not figure out the units from the attribute table and transform them into meters. I used the measure tool to see how much it was in meters using the cartesian projection: 
+![image](https://github.com/user-attachments/assets/061a514f-d0d8-452e-9db1-be4da53255f5)
+
 ### 7. Layout 
 ## Documentation of steps 
