--- a/A4.md
+++ b/A4.md
@@ -31,4 +31,7 @@ Categorized parcels in 7 classes by area size. I could not figure out the units 
 ![image](https://github.com/user-attachments/assets/061a514f-d0d8-452e-9db1-be4da53255f5)
 
 ### 7. Layout 
+![image](https://github.com/user-attachments/assets/16fd53bd-73a3-4bc7-b6b4-8d2dd150d3b9)
+
 ## Documentation of steps 
+
