--- a/A4.md
+++ b/A4.md
@@ -30,8 +30,10 @@ Created a new GPKG layer with 100 points and updated the attribute table to incl
 Categorized parcels in 7 classes by area size. I could not figure out the units from the attribute table and transform them into meters. I used the measure tool to see how much it was in meters using the cartesian projection: 
 ![image](https://github.com/user-attachments/assets/061a514f-d0d8-452e-9db1-be4da53255f5)
 
-### 7. Layout 
+### 7. Layout and .point file
 ![image](https://github.com/user-attachments/assets/16fd53bd-73a3-4bc7-b6b4-8d2dd150d3b9)
 
 ## Documentation of steps 
+![image](https://github.com/user-attachments/assets/9eccce58-acf4-4d79-807c-69dc9974826f)
+
 
