--- a/A4.md
+++ b/A4.md
@@ -32,6 +32,7 @@ Categorized parcels in 7 classes by area size. I could not figure out the units 
 
 ### 7. Layout and .point file
 ![image](https://github.com/user-attachments/assets/16fd53bd-73a3-4bc7-b6b4-8d2dd150d3b9)
+```Check villalar nest boxes reference.jpeg.points``` 
 
 ## Documentation of steps 
 ![image](https://github.com/user-attachments/assets/9eccce58-acf4-4d79-807c-69dc9974826f)
